# splitfile

./: Cargo.toml
src/: copy.rs  index.rs  main.rs  util.rs
