[package]
name = "splitfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
indicatif = "0.17.8"
libc = "0.2.153"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
sha3 = { version = "0.10.8", features = ["std", "asm"] }
toml = "0.8.9"
